kubernetes/apps/network/external-service/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-homeassistant
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8123
      name: http
