kubernetes/apps/network/external-service/homeassistant/ingress.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-homeassistant
  labels:
    kubernetes.io/service-name: external-homeassistant
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.16
ports:
  - port: 8123
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: external-homeassistant
spec:
  ports:
    - port: 80
      targetPort: 8123
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: external
  rules:
    - host: homeassistant.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-homeassistant
                port:
                  number: 80
